[package]
name = "polymarket-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros", "ws"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
